# multitrophic-risk

./: .gitignore  LICENSE  README.md  analysis.R  analysis.py  configs.py  debug.py  example.py  example_apex.py  example_lv.py  example_resource.py  example_strat.py  example_super.py  examples.py  examples_dewdney.py  marimo.toml  params.py  plot.py  plot_apex.py  plot_lv.py  plot_strat.py  plot_super.py  pyproject.toml  requirements.txt  run.py  run_all.sh  run_experiment.py  run_experiment_apex.py  run_experiment_lv.py  run_experiment_super.py  run_experiments.py  tables.R
analysis/: analysis.R  analysis.py  apex-birth-rate.R  carrying-capacity.R  config.py  funcs.py  handling-limit.R  initial-density-apex.R  initial-density-predator.R  initial-density-prey.R  initial-density-super.R  meso-lethality.R  plots.py
functions/: analysis_funcs.py  compare.py  debug.py  example.py  experiment.py  figures.py  funcs.py  model.py  plots.py  runner.py  search.py  signals.py  strategies.py  summary.py  summary_funcs.py  summary_plots.py
functions/models/: abm_resource.py  apex.py  behaviors.py  dewdney.py  lv_model.py  super.py
literature/: articles.csv  articles_full-text.csv  lit-data.R
scripts/: abm_resource_run.ipynb  abm_resource_search.py  dewdney_run.py  dewdney_search.py  model_experiment.py  model_expriment_run.py  model_search.py
