[project]
name = "multitrophic-risk"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mesa==2.4.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "ray>=2.44.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
